rust_writer_procedural/tests/ui/mutator_fails_if_already_expanded_applied_to_unit_struct.stderr
error: Cannot use #[already_expanded] attribute in an unit struct
 --> tests/ui/mutator_fails_if_already_expanded_applied_to_unit_struct.rs:7:8
  |
7 | struct SomeStruct;
  |        ^^^^^^^^^^
